fixed profile pic as it is distorted.
Set object-fit to cover and object-position to center 20%..

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -210,6 +210,8 @@ ul#nav li.current a { color: #F06000; }
    width: 120px;
    height: 120px;
    border-radius: 100%;
+   object-fit: cover;
+   object-position: center 20%;
 }
 #about .contact-details { width: 41.66667%; }
 #about .download {
