--- a/frontend/css/media-queries.css
+++ b/frontend/css/media-queries.css
@@ -53,6 +53,7 @@
       width: 114px;
       height: 114px;
       margin-left: 12px;
+      object-fit: cover;
    }
    #about .contact-details { width: 50%; }
    #about .download { width: 50%; }
